samples/_failures_safe/1761373300_dccb8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bd54975.c: In function ‘main’:
./samples/SAFE/__tmp_0bd54975.c:174:9: error: expected declaration or statement at end of input
  174 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_0bd54975.c:174:9: error: expected declaration or statement at end of input
